tests/snapshots/examples_fixtures/basics__simple_option.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/basics/simple_option.flx
== compile ==
failed (compile)
== diagnostics ==
--> compiler error[E413]: TOP-LEVEL EFFECT

Effectful operation is not allowed at top level (requires: IO).

  --> examples/basics/simple_option.flx:1:1
  |
1 | print("Testing Option types");
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  | ------------------------------ top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.


--> compiler error[E414]: MISSING MAIN FUNCTION

Effectful program is missing `fn main` root effect handler.

  --> examples/basics/simple_option.flx:1:1
  |
1 | print("Testing Option types");
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  | ------------------------------ effectful top-level execution

Hint:
  Define `fn main() with ... { ... }` and move execution there.


--> compiler error[E413]: TOP-LEVEL EFFECT

Effectful operation is not allowed at top level (requires: IO).

  --> examples/basics/simple_option.flx:4:1
  |
4 | print(none_val);
  | ^^^^^^^^^^^^^^^^
  | ---------------- top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.


--> compiler error[E413]: TOP-LEVEL EFFECT

Effectful operation is not allowed at top level (requires: IO).

  --> examples/basics/simple_option.flx:7:1
  |
7 | print(some_val);
  | ^^^^^^^^^^^^^^^^
  | ---------------- top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.


--> compiler error[E413]: TOP-LEVEL EFFECT

Effectful operation is not allowed at top level (requires: IO).

  --> examples/basics/simple_option.flx:9:1
  |
9 | print("Done");
  | ^^^^^^^^^^^^^^
  | -------------- top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.

Found 5 errors.
== stdout ==
<not executed>
